# ig_miner

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: dashboard.html
ig_miner/: __init__.py  __main__.py  api.py  cli.py  constants.py  daemon.py  scraper.py
ig_miner/storage/: sqlite_store.py  supabase_store.py
igminer/: __init__.py  cli.py  cookies.py  daemon.py
igminer/storage/: __init__.py  base.py  json_store.py  sqlite_store.py
